@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: 87309192da176734a8807e71f1c21698
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
